# schvalid

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml  test-schvalid.yml
src/schvalid/: __init__.py  tools.py  validator.py
tests/: test_tools.py  test_validator.py
tests/resources/: FACTUR-X_EN16931.sch  FACTUR-X_EN16931_codedb.xml  FACTUR-X_EXTENDED.sch  FACTUR-X_EXTENDED_codedb.xml  zugferd_2p0_EN16931_Miete.pdf.invalid.xml  zugferd_2p0_EN16931_Miete.pdf.xml
